Initial disassembler impl, it's buggy :troll: