@@ -16,47 +16,42 @@ import appeng.api.storage.data.IAEItemStack;
 import appeng.api.storage.data.IAEStack;
 import appeng.me.helpers.PlayerSource;
 import appeng.util.item.AEItemStack;
-import github.alecsio.mmceaddons.ModularMachineryAddons;
 import github.alecsio.mmceaddons.common.LoadedModsCache;
-import github.alecsio.mmceaddons.common.assembly.handler.MachineAssemblyEventHandler;
 import github.alecsio.mmceaddons.common.config.MMCEAConfig;
 import github.alecsio.mmceaddons.common.item.ItemAdvancedMachineAssembler;
+import github.alecsio.mmceaddons.common.item.ItemAdvancedMachineDisassembler;
 import ink.ikx.mmce.common.utils.StructureIngredient;
 import moze_intel.projecte.api.ProjectEAPI;
 import moze_intel.projecte.api.capabilities.IKnowledgeProvider;
 import moze_intel.projecte.utils.EMCHelper;
+import net.minecraft.block.Block;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.init.Blocks;
 import net.minecraft.init.SoundEvents;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NBTTagCompound;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.EnumFacing;
-import net.minecraft.util.EnumHand;
 import net.minecraft.util.SoundCategory;
-import net.minecraft.util.Tuple;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.text.TextComponentTranslation;
 import net.minecraft.world.World;
 import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.common.util.BlockSnapshot;
 import net.minecraftforge.event.world.BlockEvent;
+import net.minecraftforge.fluids.capability.CapabilityFluidHandler;
+import net.minecraftforge.fluids.capability.IFluidHandler;
 import net.minecraftforge.fml.common.Optional;
-import net.minecraftforge.fml.common.gameevent.TickEvent;
+import net.minecraftforge.items.CapabilityItemHandler;
+import net.minecraftforge.items.IItemHandler;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import stanhebben.zenscript.annotations.NotNull;
 
-import java.util.*;
+import java.util.Iterator;
+import java.util.List;
 
-/**
- * Represents and encapsulates all the logic related to the assembly of a multiblock.
- * Assemblies are managed by {@link github.alecsio.mmceaddons.common.assembly.MachineAssemblyManager}, which acts as
- * a cache for and provider of scheduled assemblies.
- * Assemblies are added to the manager from {@link ItemAdvancedMachineAssembler#onItemUse(EntityPlayer, World, BlockPos, EnumHand, EnumFacing, float, float, float)}
- * and an assembly step is triggered every player tick from {@link MachineAssemblyEventHandler#onPlayerTick(TickEvent.PlayerTickEvent)}
- */
-public class AdvancedMachineAssembly extends AbstractMachineAssembly {
+public class AdvancedMachineDisassembly extends AbstractMachineAssembly {
 
     private static final Logger LOGGER = LogManager.getLogger();
 
@@ -64,13 +59,10 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
     // one will be displayed to the player.
     private TextComponentTranslation lastError;
 
-    public AdvancedMachineAssembly(World world, BlockPos controllerPos, EntityPlayer player, StructureIngredient ingredient) {
+    public AdvancedMachineDisassembly(World world, BlockPos controllerPos, EntityPlayer player, StructureIngredient ingredient) {
         super(world, controllerPos, player, ingredient);
     }
 
-    /**
-     * Processes up to {@link MMCEAConfig#blocksProcessedPerTick} blocks from the assembly
-     */
     @Override
     public void assembleTick() {
         List<StructureIngredient.ItemIngredient> itemIngredients = ingredient.itemIngredient();
@@ -82,89 +74,77 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
                 break;
             }
             StructureIngredient.ItemIngredient ingredientToProcess = iterator.next();
-            tryPlaceBlock(ingredientToProcess);
+            tryBreakBlock(ingredientToProcess);
             iterator.remove();
         }
 
         sendAndResetError();
     }
 
-    /**
-     * Tries to place the provided ingredient. This method will look for the provided ingredient in the following
-     * locations, in this order:
-     * - Player inventory. This is also needed to find an {@link ItemAdvancedMachineAssembler} in the inventory,
-     *   which is needed for the next steps
-     * - From the linked ME system, if the mod is present and the assembler is linked to an ME system
-     * - From the EMC network, if the mod is present
-     */
-    private void tryPlaceBlock(StructureIngredient.ItemIngredient ingredientToProcess) {
-        BlockPos toPlacePos = getControllerPos().add(ingredientToProcess.pos());
+    private void tryBreakBlock(StructureIngredient.ItemIngredient ingredientToProcess) {
+        BlockPos toBreakPos = getControllerPos().add(ingredientToProcess.pos());
 
-        if (!canPlaceBlockAt(toPlacePos)) {return;}
+        if (!canBreakBlockAt(toBreakPos)) {return;}
 
         // The ingredient list contains a list of all valid blocks for the given block pos. For example, the different tiers
         // of hatches
 
-        for (Tuple<ItemStack, IBlockState> stackStateTuple : ingredientToProcess.ingredientList()) {
-            ItemStack stack = stackStateTuple.getFirst();
-            IBlockState state = stackStateTuple.getSecond();
+        ItemStack stack = ingredientToProcess.ingredientList().get(0).getFirst();
 
-            boolean handled = false;
-            ItemStack assembler = null;
-            // player inv
+        Block blockToBreak = world.getBlockState(toBreakPos).getBlock();
+        TileEntity tileEntity = world.getTileEntity(toBreakPos);
+        if (blockToBreak == Blocks.AIR || (tileEntity != null && tileEntity.hasCapability(CapabilityFluidHandler.FLUID_HANDLER_CAPABILITY, null))
+                || (tileEntity != null && tileEntity.hasCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY, null))) {
+            return;
+        }
+
+        boolean handled = false;
+        ItemStack disassembler = null;
+        // player inv
+        for (final ItemStack stackInSlot : player.inventory.mainInventory) {
+            // If there's more than one assembler this will work incorrectly (say if one is linked to the ME system and the other is not)
+            // but idk if it's worth addressing
+            if (stackInSlot.getItem() instanceof ItemAdvancedMachineDisassembler) {
+                disassembler = stackInSlot;
+            }
+        }
+
+        if (disassembler == null) {
+            lastError = new TextComponentTranslation("error.assembler.not.found");
+            return;
+        }
+
+        NBTTagCompound tag = disassembler.getTagCompound();
+        int modeIndex;
+        if (tag == null) {
+            disassembler.setTagCompound(tag = new NBTTagCompound());
+        }
+        modeIndex = tag.getInteger(ItemAdvancedMachineAssembler.MODE_INDEX);
+        AssemblyModes mode = AssemblyModes.getSupportedModes().get(modeIndex);
+
+        if (LoadedModsCache.aeLoaded && mode.supports(AssemblySupportedMods.APPLIEDENERGISTICS2)) {
+            handled = canMEHandle(stack, disassembler);
+        }
+
+        if (!handled && LoadedModsCache.projecteLoaded && mode.supports(AssemblySupportedMods.PROJECTE)) {
+            handled = canEMCHandle(stack);
+        }
+
+        if (!handled) {
             for (final ItemStack stackInSlot : player.inventory.mainInventory) {
-                // If there's more than one assembler this will work incorrectly (say if one is linked to the ME system and the other is not)
-                // but idk if it's worth addressing
-                if (stackInSlot.getItem() instanceof ItemAdvancedMachineAssembler) {
-                    assembler = stackInSlot;
-                    if (handled) {break;}
-                }
-
                 if (ItemStack.areItemsEqual(stack, stackInSlot) && !handled) {
                     handled = true;
                     stackInSlot.shrink(stack.getCount());
                 }
             }
-
-            if (assembler == null) {
-                lastError = new TextComponentTranslation("error.assembler.not.found");
-                return;
-            }
-
-            NBTTagCompound tag = assembler.getTagCompound();
-            int modeIndex;
-            if (tag == null) {
-                assembler.setTagCompound(tag = new NBTTagCompound());
-            }
-            modeIndex = tag.getInteger(ItemAdvancedMachineAssembler.MODE_INDEX);
-            AssemblyModes mode = AssemblyModes.getSupportedModes().get(modeIndex);
-
-            if (!handled && LoadedModsCache.aeLoaded && mode.supports(AssemblySupportedMods.APPLIEDENERGISTICS2)) {
-                handled = canMEHandle(stack, assembler);
-            }
-
-            if (!handled && LoadedModsCache.projecteLoaded && mode.supports(AssemblySupportedMods.PROJECTE)) {
-                handled = canEMCHandle(stack);
-            }
-
-            if (!handled) {
-                continue;
-            }
-
-            world.setBlockState(toPlacePos, state);
-            world.playSound(null, toPlacePos, SoundEvents.BLOCK_METAL_PLACE, SoundCategory.BLOCKS, 1.0F, 1.0F);
-            TileEntity te = world.getTileEntity(toPlacePos);
-            if (te != null && ingredientToProcess.nbt() != null) {
-                try {
-                    te.readFromNBT(ingredientToProcess.nbt());
-                } catch (Exception e) {
-                    ModularMachineryAddons.logger.warn("Failed to apply NBT to TileEntity!", e);
-                    world.removeTileEntity(toPlacePos);
-                    world.setTileEntity(toPlacePos, state.getBlock().createTileEntity(world, state));
-                }
-            }
-            break;
         }
+
+        if (!handled) {
+            return;
+        }
+
+        world.setBlockToAir(toBreakPos);
+        world.playSound(null, toBreakPos, SoundEvents.BLOCK_METAL_BREAK, SoundCategory.BLOCKS, 1.0F, 1.0F);
     }
 
     @Optional.Method(modid = LoadedModsCache.AE2)
@@ -197,9 +177,9 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
 
         IMEMonitor<IAEItemStack> itemStorage = storageGrid.getInventory(storageHelper.getStorageChannel(IItemStorageChannel.class));
 
-        IAEStack<IAEItemStack> aeStack = aeApi.storage().poweredExtraction(energyGrid, itemStorage, AEItemStack.fromItemStack(stack), new PlayerSource(player, host), Actionable.SIMULATE);
-        if (aeStack != null && aeStack.getStackSize() == stack.getCount()) {
-            storageHelper.poweredExtraction(energyGrid, itemStorage, AEItemStack.fromItemStack(stack), new PlayerSource(player, host), Actionable.MODULATE);
+        IAEStack<IAEItemStack> aeStack = aeApi.storage().poweredInsert(energyGrid, itemStorage, AEItemStack.fromItemStack(stack), new PlayerSource(player, host), Actionable.SIMULATE);
+        if (aeStack == null) { // Was able to insert all of it
+            storageHelper.poweredInsert(energyGrid, itemStorage, AEItemStack.fromItemStack(stack), new PlayerSource(player, host), Actionable.MODULATE);
             return true;
         }
 
@@ -232,12 +212,12 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
             return false;
         }
 
-        if (emc - stackEmcValue < 0) {
+        if (stackEmcValue > 0 && emc > Long.MAX_VALUE - stackEmcValue) { // would overflow
             lastError = new TextComponentTranslation("message.assembly.missing.emc", stack.getDisplayName(), stack.getCount(), emc, stackEmcValue);
             return false;
         }
 
-        provider.setEmc(emc - stackEmcValue);
+        provider.setEmc(emc + stackEmcValue);
         return true;
     }
 
@@ -251,13 +231,10 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
     }
 
     @SuppressWarnings("deprecation") // Those warnings are only relevant for 1.13+
-    private boolean canPlaceBlockAt(BlockPos pos) {
-        BlockSnapshot blockSnapshot = BlockSnapshot.getBlockSnapshot(world, pos);
-        // probably double check this and ensure it works with ie claims
-        IBlockState placedAgainst = blockSnapshot.getWorld().getBlockState(blockSnapshot.getPos().offset(EnumFacing.DOWN)); // idk?
-        BlockEvent.PlaceEvent placeEvent = new BlockEvent.PlaceEvent(BlockSnapshot.getBlockSnapshot(world, pos), placedAgainst, player, EnumHand.MAIN_HAND);
-        MinecraftForge.EVENT_BUS.post(placeEvent);
-        return !placeEvent.isCanceled();
+    private boolean canBreakBlockAt(BlockPos pos) {
+        BlockEvent.BreakEvent breakEvent = new BlockEvent.BreakEvent(world, pos, world.getBlockState(pos), player);
+        MinecraftForge.EVENT_BUS.post(breakEvent);
+        return !breakEvent.isCanceled();
     }
 
     private void sendAndResetError() {
@@ -266,5 +243,4 @@ public class AdvancedMachineAssembly extends AbstractMachineAssembly {
             lastError = null;
         }
     }
-
 }
